k8s_deployment/fcrepo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mdr-fcrepo
  name: mdr-fcrepo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mdr-fcrepo
  # strategy:
  #   type: Recreate
  template:
    metadata:
      labels:
        app: mdr-fcrepo
    spec:
      containers:
      - name: mdr-fcrepo
        image: ualbertalib/docker-fcrepo4:4.7
        ports:
        ports:
          - containerPort: 8080
        volumeMounts:
        - name: fcrepo
          mountPath: /data
      volumes:
      - name: fcrepo
        persistentVolumeClaim:
          claimName: fcrepo
      hostname: mdr-fcrepo
      # restartPolicy: Always
