k8s_deployment/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mdr-redis
  name: mdr-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mdr-redis
  # strategy:
  #   type: Recreate
  template:
    metadata:
      labels:
        app: mdr-redis
    spec:
      containers:
      - name: mdr-redis
        image: redis:5
        args:
          - redis-server
          - --appendonly
          - "yes"
        livenessProbe:
          exec:
            command:
              - redis-cli
              - ping
          failureThreshold: 3
          periodSeconds: 30
          timeoutSeconds: 5
        ports:
          - containerPort: 6379
        volumeMounts:
        - name: redis
          mountPath: /data
      volumes:
      - name: redis
        persistentVolumeClaim:
          claimName: redis
      hostname: mdr-redis
      # restartPolicy: Always
