k8s_deployment/solr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mdr-solr
  name: mdr-solr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mdr-solr
#  strategy:
#    type: Recreate
  template:
    metadata:
      labels:
        app: mdr-solr
    spec:
      # securityContext:
      #   fsGroup: 8983
      #   # runAsUser: 8983
      containers:
      - name: mdr-solr
        image: solr:7
        command:
          - sh
          - -c
          - "ls -l /opt/solr/ && echo $SOLR_HOME && ls -l /opt/solr/server/ && precreate-core hydra-test /opt/solr/solr_conf && solr-precreate ${SOLR_CORE} /opt/solr/solr_conf"
        # livenessProbe:
        #   exec:
        #     command:
        #       - wget
        #       - "-O /dev/null"
        #       - "http://localhost:8983/solr/"
        #   failureThreshold: 3
        #   periodSeconds: 30
        #   timeoutSeconds: 5
        ports:
          - containerPort: 8983
        volumeMounts:
        - name: solr
          mountPath: /opt/solr/server/solr/mycores
        - name: solr-conf
          mountPath: /opt/solr/solr_conf
        - name: solr-logs
          mountPath: /opt/solr/server/logs
      volumes:
      - name: solr
        persistentVolumeClaim:
          claimName: solr
      - name: solr-logs
        persistentVolumeClaim:
          claimName: solr-logs
      - name: solr-conf
        persistentVolumeClaim:
          claimName: solr-conf
        # hostPath:
        #   path: /home/anusha/Documents/src/nims-hyrax/hyrax/solr/config
        #   type: Directory
      hostname: mdr-solr
      # restartPolicy: Always
