k8s_deployment/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mdr-web
  name: mdr-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mdr-web
  # strategy:
  #   type: Recreate
  template:
    metadata:
      labels:
        app: mdr-web
    spec:
      containers:
      - name: mdr-web
        image: nims-hyrax_web:latest
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: true
        args:
          - bash
          - -c
          - /bin/docker-entrypoint.sh
        ports:
          - containerPort: 3000
        volumeMounts:
          - name: web-file-uploads
            mountPath: /shared/uploads/
          - name: web-derivatives
            mountPath: /shared/derivatives/
          - name: web-cache
            mountPath: /shared/cache/
          - name: web-branding
            mountPath: /data/public/branding
          - name: azure-shared-storage
            mountPath: /data/mdrtest3-test
      volumes:
        - name: azure-shared-storage
          azureFile:
            shareName: mdrtest3-test
            secretName: azure-fileshare-secret
            readOnly: false
        - name: web-file-uploads
          persistentVolumeClaim:
            claimName: web-file-uploads
        - name: web-derivatives
          persistentVolumeClaim:
            claimName: web-derivatives
        - name: web-cache
          persistentVolumeClaim:
            claimName: web-cache
        - name: web-branding
          persistentVolumeClaim:
            claimName: web-branding
      hostname: mdr-web
      # restartPolicy: Always
