k8s_deployment/appdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mdr-appdb
  labels:
    app: mdr-appdb
spec:
  selector:
    app: mdr-appdb
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
