k8s_deployment/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mdr-web
  labels:
    app: mdr-web
spec:
  selector:
    app: mdr-web
  ports:
    - name: mdr-web
      port: 3000
      protocol: TCP
      targetPort: 3000
