k8s_deployment/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mdr-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
#  tls:
#  - hosts:
#    - mdrazure.antleaf.com
  rules:
  #  - host: mdrazure.antleaf.com
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mdr-web
            port:
              number: 3000
